--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script type="text/javascript" src="/js/chat.js"></script>
         <link rel="stylesheet" href="/css/chat.css" type="text/css" />
     </head>
